--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="share_button_alt">Share</string>
     <string name="save_button_alt">Save</string>
     <string name="switch_camera">Switch camera</string>
+    <string name="open_image_gallery">open image gallery</string>
 </resources>
