--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">S&amp;ST</string>
-    <string name="about">"Crop a person figure with DeeplabV3 .tflite model"</string>
+    <string name="about">"DeeplabV3 model"</string>
     <string name="tflite_model" translatable="false">TFLite Model:</string>
     <string name="share_button_alt">Share</string>
     <string name="save_button_alt">Save</string>
@@ -8,5 +8,6 @@
     <string name="open_image_gallery">open image gallery</string>
     <string name="koinStyle">koinStyle</string>
     <string name="choose_a_style" translatable="false">Choose a Style</string>
+    <string name="aboutSyleTransfer">Style Transfer procedure</string>
 
 </resources>
