UI fix and ML kit inference with grayscale bitmap

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,5 +12,6 @@
     <string name="keras_ocr_result">Keras OCR result:</string>
     <string name="ml_kit_result">ML kit result:</string>
     <string name="comparing_ocr_models">Comparing OCR models</string>
+    <string name="inference_time_0ms">Inference time: 0ms</string>
 
 </resources>
